[package]
name = "yatsr"
version = "0.1.0"
edition = "2021"

[[example]]
name="basic_triangle"
path="examples/1.basic/1.triangle/main.rs"


[[example]]
name="basic_super_sampling"
path="examples/1.basic/2.super-sampling/main.rs"

[[example]]
name="basic_draw_model"
path="examples/1.basic/3.draw_model/main.rs"

[[example]]
name="basic_z_buffer"
path="examples/1.basic/4.z-buffer/main.rs"

[[example]]
name="basic_pipeline"
path="examples/1.basic/5.pipeline/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
