[package]
name = "yatsr"
version = "0.1.0"
edition = "2021"

[[example]]
name="basic_triangle"
path="examples/1.basic/1.triangle/main.rs"


[[example]]
name="basic_super_sampling"
path="examples/1.basic/2.super-sampling/main.rs"

[[example]]
name="basic_draw_model"
path="examples/1.basic/3.draw_model/main.rs"

[[example]]
name="basic_z_buffer"
path="examples/1.basic/4.z-buffer/main.rs"

[[example]]
name="basic_pipeline"
path="examples/1.basic/5.pipeline/main.rs"

[[example]]
name="basic_alpha"
path="examples/1.basic/6.alpha/main.rs"
[[example]]
name="basic_bitmap"
path="examples/1.basic/7.bitmap-font/main.rs"

[[example]]
name="transform_2d"
path="examples/2.transform/1.2d/main.rs"

[[example]]
name="transform_2d_matrix"
path="examples/2.transform/2.2d-matrix/main.rs"
[[example]]
name="transform_3d_viewport"
path="examples/2.transform/3.3d-viewport/main.rs"
[[example]]
name="transform_3d_rotation"
path="examples/2.transform/4.3d-rotation/main.rs"

[[example]]
# 变换法向量
name="transform_3d_normal_transform"
path="examples/2.transform/4.3d-rotation/normal.rs"
[[example]]
name="transform_arbitrary_rotation"
path="examples/2.transform/5.arbitrary-rotation/main.rs"
[[example]]
name="transform_orthographic_projection"
path="examples/2.transform/6.orthographic-projection/main.rs"
[[example]]
name="transform_viewing"
path="examples/2.transform/7.viewing/main.rs"
[[example]]
name="transform_viewing_moving_camera"
path="examples/2.transform/7.viewing/moving-camera.rs"
[[example]]
name="transform_perspective"
path="examples/2.transform/8.perspective-projection/main.rs"
[[example]]
name="transform_perspective_fov"
path="examples/2.transform/8.perspective-projection/fov.rs"

[[example]]
name="texture_diffuse"
path="examples/3.texture/1.diffuse/main.rs"
[[example]]
name="texture_mosaic"
path="examples/3.texture/2.bilinear/mosaic.rs"
[[example]]
name="texture_bilinear"
path="examples/3.texture/2.bilinear/bilinear.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"

[profile.release-with-debug]
inherits = "release"
debug = true
